resolve ui issues

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -12241,8 +12241,6 @@ h1.about-us-heading + div p {
   height: 33px;
   line-height: 33px;
   padding: 0 10px;
-  width: 89.7%;
-  float: left;
 }
 .breakingnew-home .new-detail:before, .breakingnew-home .new-detail:after {
   content: "";
@@ -13445,6 +13443,16 @@ span.close_btt {
 
 .sidebar-section-photo .we_may_suggest .widget-title {
   display: none;
+}
+
+.widget-placeholder {
+  display: none;
+}
+
+.itg-layout-container.election-page {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
