--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -10114,9 +10114,10 @@ h1.about-us-heading{
 /*css start home page breaking new */
 .region-breaking-news{display: inline-block; vertical-align: top; width: 100%;}
 .breakingnew-home{
-    margin-bottom:40px;
+    margin-bottom:30px;
     font-family: roboto;
-    @include clearfix;            
+    @include clearfix;   
+    @include pos(relative);
     .title{
         text-transform:uppercase;
         background:#000;        
@@ -10124,23 +10125,28 @@ h1.about-us-heading{
         height: 33px;
         line-height: 35px;
         padding: 0 10px;        
-        width: 10.3%;
+        min-width: 100px;
         font-size: 18px;
         font-weight:600;
         @include float(left);
+        @include pos(relative);
+        z-index: 9;
         text-align: center;
+        max-width: 350px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        min-width: 100px;
     }
     .new-detail{
         @include clearfix;        
         background:#ffc106;                
         height: 33px;
         line-height: 33px;
-        padding: 0 10px; 
-        .marquee-container {    
-            width: 78%;
+        padding-right: 215px;
+        .marquee-container {
             height: 33px;
             @include pos(relative);
-            @include float(left);
             overflow:hidden;    
             .marquee-child{
                 height: 33px;
@@ -10158,6 +10164,7 @@ h1.about-us-heading{
                 padding-right: 20px;
             }
         }
+        .ltv-and-ss{position: absolute; right: 0; top: 0;}
         .social-share{
            @include float(right);
             @include social-share;     
@@ -10176,7 +10183,7 @@ h1.about-us-heading{
             a{
                 color: #fff;
                 font-size: 14px;
-                padding-left:15px;
+                padding:7px;
                 img{
                     padding-top: 5px;
                 }
