--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -8063,7 +8063,7 @@ div.node #comments h2 {
 .load-more-wrapper .add-more-block, .load-more-wrapper .removes-more-block {
   padding: 10px 20px;
   font: 14px/18px Roboto;
-  color: #fff;
+  color: #666;
   background-color: #666;
   border-radius: 5px;
   margin: 0 10px;
