ITG-3247 #time 1h #comment scroll added for most popular widget, if it comes in place of section card, and it is working fine with animation effect for featured story section.

--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -397,6 +397,10 @@ input[type="file"], input[type="submit"], input[type="text"] {
   height: auto;
 }
 
+.itg-common-section .widget-wrapper.top_stories_ordering .block-itg-widget, .itg-common-section .widget-wrapper.most_popular .block-itg-widget {
+  overflow-y: auto;
+}
+
 .widget-title {
   display: inline-block;
   vertical-align: top;
