--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -8064,7 +8064,7 @@ div.node #comments h2 {
   padding: 10px 20px;
   font: 14px/18px Roboto;
   color: #666;
-  background-color: #666;
+  background-color: #d1d1d1;
   border-radius: 5px;
   margin: 0 10px;
   text-transform: uppercase;
@@ -12120,4 +12120,8 @@ body.taxonomy-form-term-tags {
 }
 .view .view-filters [id*="views-exposed-form-itg-active-users-report-page"] .views-exposed-form .views-exposed-widget.views-widget-filter-created .form-item-created-max label {
   display: none;
+}
+
+.itg-common-section .widget-wrapper.top_stories_ordering .block-itg-widget, .itg-common-section .widget-wrapper.most_popular .block-itg-widget {
+  overflow-y: auto;
 }
