--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -1957,7 +1957,14 @@ footer{
                         border-right: none;
                         i{
                             vertical-align: top;
-                            margin-right: 5px;
+                            margin: 0 9px;
+                            float: left;
+                            font-size: 22px;
+                        }
+                        span{
+                          margin-top: 0;
+                          line-height: 22px;
+                          text-align: left;
                         }
                     }
                     a.unflag-action{
