ITG-2609 #time 30m #comment  added scroll to show hidden data.

--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -1828,7 +1828,6 @@ $debug: "width:645px"; // TODO: move to _settings.scss
   background-color: #000;
   float: left;
   width: 100%;
-  margin-bottom: 16px;
   overflow: hidden;
 }
 .home_page_poll_widget_block .poll-data .active-poll-title h2 {
@@ -1888,7 +1887,9 @@ $debug: "width:645px"; // TODO: move to _settings.scss
   z-index: 99;
 }
 .home_page_poll_widget_block .poll-wrapper .poll-data .poll-replace-id {
-  margin-top: 0;
+  padding: 10px 0 0;
+  max-height: 115px;
+  overflow-y: auto;
 }
 .home_page_poll_widget_block .poll-wrapper .poll-data .poll-replace-id .past-poll li:last-child,
 .home_page_poll_widget_block .poll-wrapper .poll-data .poll-replace-id .past-poll li {
