--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -5024,6 +5024,10 @@ div.node #comments h2 {
 .newsletter-templates .newsletter-header {
   margin-bottom: 30px;
 }
+.newsletter-templates .newsletter-banner {
+  height: 100px;
+  overflow: hidden;
+}
 .newsletter-templates .newsletter-banner img {
   width: 100%;
   height: 100px;
