--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -4525,6 +4525,8 @@ div.node{
     margin-bottom: 30px;
   }
   .newsletter-banner{
+    height: 100px;
+    overflow: hidden;
     img{
       width: 100%;
       height: 100px;
