--- a/sites/all/themes/itg/sass/layout-manager.scss
+++ b/sites/all/themes/itg/sass/layout-manager.scss
@@ -3118,3 +3118,9 @@ img{
     img{max-width: 56px;}
   }
 }
+.widget-help-text {
+    text-align: right;
+    padding: 5px 10px;
+    font-size: 16px;
+    /* background: #ddd; */
+}
