--- a/sites/all/modules/custom/itg_bestcolleges/css/itg_bestcollege.css
+++ b/sites/all/modules/custom/itg_bestcolleges/css/itg_bestcollege.css
@@ -672,9 +672,11 @@ left: 0px;top: 50%; transform: translateY(-50%); -webkit-transform: translateY(-
 
 /* ranking section css */
 
-.ranking-section .wishranking,.ranking-section .prvlink{ width:50%; float:left;}
-.ranking-section .wishranking .midcontitles,.ranking-section .prvlink .prvarrtxt{ font-weight:bold; padding-top:10px;}
-.ranking-section ul li{ list-style:none; padding:3px 0;}
+.ranking-section .wishranking{ width:45%; float:left;border: 1px solid #EAEAEA;padding-bottom: 20px;margin-top:20px;}
+.ranking-section .prvlink{ width:45%; float:right;border: 1px solid #EAEAEA;padding-bottom: 20px;margin-top:20px;}
+.midcontitles,.prvarrtxt {color: #545454;font: 700 17px roboto; background: #EAEAEA;padding: 3px 10px;}
+.ranking-section ul li{ list-style-image: none; font-size: 14px;font-family: roboto; color: #545454;font-weight: 400;margin-top:15px;
+    padding-left: 10px;list-style: none;}
 
 .bestcollege-rhs-video {position: relative;}
 .bestcollege-rhs-video .bestcollege-more-video{position: absolute;top: 12px;right: 10px;color: #fff;}
@@ -684,6 +686,21 @@ left: 0px;top: 50%; transform: translateY(-50%); -webkit-transform: translateY(-
 .citymaincont table{ width:100%}
 .citymaincont table tr td { width:25%; padding:5px 0;}
 .citymaincont table tr td a{text-decoration: none;outline: none;color: #323232; font-size:16px;}
+
+
+/*Over image section */
+.divtopbest { margin-bottom:20px; width:100%; float:left}
+.topimgtxt {font:normal 18px arial; color:#666666; margin-bottom:10px;}
+.bestbox {width:33%; float:left; text-align: center;}
+.bestbox .info1 { background:url(../images/Info-1-BW.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px; margin:0 auto;}
+.bestbox .info1:hover, .bestbox .active1 { background:url(../images/Info-1-Colour.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
+.bestbox .info2 { background:url(../images/Info-2-BW.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px; margin:0 auto;}
+.bestbox .info2:hover, .bestbox .active2 { background:url(../images/Info-2-Colour.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
+.bestbox .info3 { background:url(../images/Info-3-BW.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px; margin:0 auto;}
+.bestbox .info3:hover, .bestbox .active3 { background:url(../images/Info-3-Colour.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
+.besthead {text-align:center; margin-top:10px; text-transform:uppercase; color:#666666; font:normal 18px arial;}
+.besthead a {text-decoration:none; color:#666666;}
+.besthead a:hover { text-decoration:underline}
 
 @media screen and (max-width: 1024px){
     .sidebar-second .watch-right-now-video.bestcollege-rhs-video ul li.watch-right-now-list .pic{ width: 100px;}
@@ -698,7 +715,7 @@ left: 0px;top: 50%; transform: translateY(-50%); -webkit-transform: translateY(-
 }
 @media screen and (min-width: 481px) and (max-width:767px) {
 .grid-group-item .thumbnail{ height: auto;}
-.sponsorContainer{ width:100%; height: 107px;}
+.sponsorContainer{ width:100%; height: 160px;}
 .leftPresentingSponsor{ width:100%; height:48px}
 .leftPresentingSponsor:after{ display: none}
 .rightAssociateSponsor{ width:100%; border-top:1px solid #000}
@@ -709,12 +726,13 @@ left: 0px;top: 50%; transform: translateY(-50%); -webkit-transform: translateY(-
 .list-group-item .thumbnail .thumbnail-img{    position: static;    left: 0px;}
 .list-group-item .thumbnail img{    width: 100%;  min-height: auto; max-height: 100%;}
 .list-group-item .list-group-item-heading{position: static;  top: 0px;transform: translateY(0%);-webkit-transform: translateY(0%);}
+.ranking-section .wishranking,.ranking-section .prvlink{ width:100%;}
 
 
 
 }
 @media screen and (min-width: 320px) and (max-width:480px) {
-.sponsorContainer{ width:100%; height: 107px; text-align: center; border:0px; overflow: inherit}
+.sponsorContainer{ width:100%; height: 160px; text-align: center; border:0px; overflow: hidden;}
 .leftFirstLogo{ position: relative; width:100%}
 .leftPresentingSponsor{ width:95%; height:48px; margin-left:0px; position: absolute;  left:50%; top:6px; margin:0 0 0 -125px; height:48px}
 .leftPresentingSponsor:after{ display: none}
@@ -776,22 +794,12 @@ text-align: left;}
 .vuukle-ads{ margin-left:-15px;}
 .slick-slide{height: auto!important;} .slider_outer .slick-slide{ position: static;}
 .slick-slide a{ display: block; width:100%;}
+.ranking-section .wishranking,.ranking-section .prvlink{ width:100%;}
+.bestbox {width:100%; float:left; text-align: center;}
 }
 
 
 
 
-.divtopbest { margin-bottom:20px; width:680px; float:left}
-.topimgtxt {font:normal 18px arial; color:#666666; margin-bottom:10px;}
-.bestbox {width:220px; float:left;}
-.bestbox .info1 { background:url(../images/Info-1-BW.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
-.bestbox .info1:hover, .bestbox .active1 { background:url(../images/Info-1-Colour.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
-.bestbox .info2 { background:url(../images/Info-2-BW.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
-.bestbox .info2:hover, .bestbox .active2 { background:url(../images/Info-2-Colour.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
-.bestbox .info3 { background:url(../images/Info-3-BW.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
-.bestbox .info3:hover, .bestbox .active3 { background:url(../images/Info-3-Colour.jpg) no-repeat top left; width:220px; height:216px; text-indent:-9999px;}
-.besthead {text-align:center; margin-top:10px; text-transform:uppercase; color:#666666; font:normal 18px arial;}
-.besthead a {text-decoration:none; color:#666666;}
-.besthead a:hover { text-decoration:underline}
 
  
