--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11167,7 +11167,7 @@ span.close_btt {
   }
 }
 
-
+.widget-help-text{display: none;}
 @media (min-width: 768px) {
   .modal-dialog {
     width: 960px;
