--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -11985,7 +11985,8 @@ span.file a {
 }
 [id*="itg-registred-user-report-form"] .form-type-textfield {
   float: left;
-  margin-right: 10px;
+  margin: 0 10px 0 0;
+  padding: 0;
 }
 [id*="itg-registred-user-report-form"] .form-type-textfield > label {
   width: auto;
@@ -12180,4 +12181,50 @@ body.taxonomy-form-term-tags {
 /*For Edit Quiz*/
 .form-type-managed-file > label + div.file-widget.form-managed-file {
   height: 28px;
+}
+
+.report-chart-tabs {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  list-style: none;
+  margin-top: 30px;
+  border-bottom: 1px solid #e5e5e5;
+}
+.report-chart-tabs li {
+  float: left;
+  margin-right: 5px;
+}
+.report-chart-tabs li a {
+  padding: 10px;
+  display: block;
+  background-color: #e5e5e5;
+  color: #323232;
+}
+.report-chart-tabs li.active a, .report-chart-tabs li:hover a {
+  background-color: #323232;
+  color: #fff;
+}
+
+.page-content-visits-by-user .custom-pagger {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
+}
+.page-content-visits-by-user .custom-pagger a {
+  border: 1px solid #1fb5ad;
+  display: inline-block;
+  padding: 0 5px;
+  margin: 0 3px;
+  color: #1fb5ad;
+}
+.page-content-visits-by-user .custom-pagger a:hover, .page-content-visits-by-user .custom-pagger a.selected {
+  background-color: #1fb5ad;
+  color: #fff;
+}
+.page-content-visits-by-user .custom-pagger a.pagger-txt {
+  background-color: #fff !important;
+  color: #1fb5ad !important;
 }
