--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -8576,6 +8576,9 @@ div.node{
       display: inline-block;
       vertical-align: top;
       width: 48%;
+      .form-field-name-field-story-tv-time{
+        width: 100%;
+      }
       .form-type-select{
         margin: 0;
       }
