#time 1h #comment resolve ui issues

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12194,7 +12194,7 @@ body.taxonomy-form-term-tags {
   width: 280px;
 }
 .view .view-filters [id*="views-exposed-form-section-wiser-breakup-report-page"] .views-exposed-form .views-widget-per-page {
-  width: 280px;
+  width: 100px;
 }
 .view .view-filters [id*="views-exposed-form-section-wiser-breakup-report-page"] .views-exposed-form .views-exposed-widget.views-submit-button {
   width: 560px;
@@ -12281,4 +12281,23 @@ body.taxonomy-form-term-tags {
 .page-itg-registered-vs-anonymous-user-content-visited-report #ui-datepicker-div,
 .page-section-wise-breakup-report #ui-datepicker-div {
   display: none;
+}
+
+#ugc-content-view ul {
+  list-style: none;
+}
+#ugc-content-view ul li {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  padding: 5px 0;
+}
+#ugc-content-view ul li strong {
+  float: left;
+  width: 200px;
+  padding-right: 20px;
+}
+#ugc-content-view ul li span {
+  display: block;
+  overflow: hidden;
 }
