ITG-2971 #time 2h #comment token popup theming done.

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -1814,6 +1814,11 @@ footer{
         width: 100%;
         height: 40vh;
     }
+    .description{
+      iframe{
+        min-height: 480px;
+      }
+    }
     ul{
         @extend .list-none;
     }
