--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -2257,6 +2257,9 @@ footer .multiple-items-footer i.slick-next {
   width: 100%;
   height: 40vh;
 }
+.story-section .description iframe {
+  min-height: 480px;
+}
 .story-section h1 {
   font-size: 24px;
   font-size: 1.5rem;
