--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11622,3 +11622,52 @@ span.file a{pointer-events: none; color: #2f2f2f;}
       }
     }
   }
+  
+  
+  .itgadmin-popup-wrapper {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+  }
+  .itgadmin-popup{
+    background-color: #fff;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    max-height: 80%;
+    max-width: 900px;
+    overflow: auto;
+    padding: 20px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    h2{margin: 20px 0;}
+    .mail-table {
+      height: calc(100% - 58px);
+      overflow: auto;
+      table{margin: 0;}
+    }
+    .close-itgadmin-popup{
+      color: #868686;
+      font-size: 20px;
+      height: 20px;
+      position: absolute;
+      right: 10px;
+      text-align: center;
+      top: 10px;
+      width: 20px;
+      cursor: pointer;
+    }
+  }
+  .node-mail_templates-form{
+    .vertical-tabs{
+      .vertical-tabs-list{display: none;}
+    }
+  }
+  .get-tokens > a {
+    color: #0c8bb1;
+  }
