--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11400,7 +11400,10 @@ span.file a{pointer-events: none; color: #2f2f2f;}
     }
     #piechart{max-width: 100%;}
     .tab-content{
-      #report2{display: none;}
+      position: relative;
+      min-height: 400px;
+      #report1, #report2{position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
+      #report2{opacity: 0;}
     }
   }
   .node-supplement-form{
