--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -1531,6 +1531,11 @@ footer{
         }
     }
 }
+.trending-list{
+  .top-takes-video-container{
+    border: 1px solid $border-color;
+  }
+}
 /*End CSS trending-videos Home  page*/
 /*Start Search page css*/
 .view-front-end-global-search{
