--- a/sites/all/themes/itg/css/layout-manager.css
+++ b/sites/all/themes/itg/css/layout-manager.css
@@ -542,7 +542,6 @@ img {
 
 .trending-videos {
   border: 1px solid #dddddd;
-  padding-top: 10px;
 }
 .trending-videos .trending-videos-list {
   overflow: hidden;
@@ -685,15 +684,15 @@ img {
     height: 671px;
     overflow: hidden;
   }
+  .itg-layout-container .top-colum-3 .itg-widget-parent {
+    margin-bottom: 26px;
+  }
   .itg-layout-container .top-colum-3 .itg-widget-parent .droppable {
     height: 320px;
   }
   .itg-layout-container .top-colum-3 .droppable {
     height: 272px;
     overflow: hidden;
-  }
-  .itg-layout-container .top-colum-3 .itg-widget:first-child {
-    margin-bottom: 40px;
   }
   .itg-layout-container.itg-admin .gray-bg-layout {
     background-color: #f1f1f1;
@@ -883,6 +882,19 @@ img {
   height: 5px;
   margin-top: -2px;
   background: #ddd;
+}
+
+.trending-list .top-takes-video-container, .trending-list .watch-right-now-video {
+  border: 1px solid #dddddd;
+}
+.trending-list .top-takes-video-container h3, .trending-list .watch-right-now-video h3 {
+  display: none !important;
+}
+.trending-list .top-takes-video-container ul li, .trending-list .watch-right-now-video ul li {
+  padding: 10px 24px !important;
+}
+.trending-list .top-takes-video-container ul li:last-child, .trending-list .watch-right-now-video ul li:last-child {
+  border-bottom: none !important;
 }
 
 .sidebar-second .top-takes-video-container h3 {
