ITG-3279 #time 2h #comment all points done.

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12366,6 +12366,12 @@ body.taxonomy-form-term-tags {
   cursor: pointer;
 }
 
+.node-mail_templates-form .form-item-title {
+  display: none;
+}
+.node-mail_templates-form .vertical-tabs {
+  display: none;
+}
 .node-mail_templates-form .vertical-tabs .vertical-tabs-list {
   display: none;
 }
