--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11672,7 +11672,9 @@ span.file a{pointer-events: none; color: #2f2f2f;}
     }
   }
   .node-mail_templates-form{
+    .form-item-title{display: none;}
     .vertical-tabs{
+      display: none;
       .vertical-tabs-list{display: none;}
     }
   }
